--- a/css/styles.css
+++ b/css/styles.css
@@ -569,11 +569,6 @@ img{
     color: var(--primery-text-color-teme-dark);
 }
 
-.subscription-form-field {
-    display: block;
-    padding-right: 12px;
-}
-
 .subscription-form{
     display: flex;
 }
@@ -600,6 +595,8 @@ img{
 } 
 
 .subscription-form-submit-btn {
+    margin-left: 12px;
+    
     padding: 10px 28px;
     border: 1px solid var(--accent-color);
     background-color: var(--accent-color);
@@ -619,7 +616,6 @@ img{
     display: flex;
     align-items: center;
 
-    font-family: var(--primery-font-family);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -712,7 +708,6 @@ img{
 .modal-header{
     margin-bottom: 12px;
 
-    font-family: var(--primery-font-family);
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -723,7 +718,8 @@ img{
 }
 
 .contact-text-name{
-    font-family: var(--primery-font-family);
+    display: block;
+
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -811,7 +807,6 @@ img{
     align-items: center;
     position: relative;
 
-    font-family: var(--primery-font-family);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -824,18 +819,6 @@ img{
 .contact-form-checkbox-label>a{
     color: var(--accent-color);
 }
-
-/* .contact-form-link::after {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-
-    content: '';
-    width: 28%;
-    height: 1px;
-    background-color: var(--accent-color);
-} */
-
 
 
 .contact-form-checkbox-label::before{
@@ -869,7 +852,6 @@ img{
     background-color: var(--accent-color);
     border-radius: 4px;
 
-    font-family: var(--primery-font-family);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -988,7 +970,6 @@ img{
 .project-text{
     padding: 62px 24px;
 
-    font-family: var(--primery-font-family);
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
