--- a/sass/components/_main-title.scss
+++ b/sass/components/_main-title.scss
@@ -1,12 +1,20 @@
 .main-title {
-    max-width: 690px;
+    max-width: 360px;
     word-wrap: break-word;
     text-align: center;
 
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.42;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--primery-text-color-teme-dark);
+}
+@media screen and (min-width: 1200px) {
+    .main-title {
+        max-width: 690px;
+
+        font-size: 44px;
+        line-height: 1.36;
+    }
 }
