--- a/sass/layot/_header.scss
+++ b/sass/layot/_header.scss
@@ -1,25 +1,66 @@
 .page-header {
-    border-bottom: 1px solid #ececec;
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    position: relative;
 }
 
-.header-container {
-    display: flex;
-    align-items: center;
-    /* justify-content: space-between; */
+@media screen and (min-width: 768px) {
+    .page-header {
+        padding: 0;
+        border-bottom: 1px solid #ececec;
+    }
 }
+
+//480px +
+
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+@media screen and (min-width: 768px) {
+    .header-container {
+        display: flex;
+        align-items: center;
+    }
+}
+
+.mobile-menu-btn{
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+}
+//кнопка исчезает, когда экран увеличивается
+@media screen and (min-width: 768px) {
+    .mobile-menu-btn {
+        display: none;
+    }
+}
+
+.mobile-menu-btn__icon{
+    fill: var(--secondary-text-color-teme-light);
+}
+
+//Start content
 
 .navigation {
-    display: flex;
-    align-items: center;
-}
+        display: flex;
+        align-items: center;
+    }
 
 .nav-list {
-    display: flex;
-    align-items: center;
+    display: none;
 }
-
-.nav-list__item:not(:last-child) {
-    margin-right: 50px;
+@media screen and (min-width: 768px) {
+    .nav-list {
+        display: flex;
+        align-items: center;
+    }
+    .nav-list__item:not(:last-child) {
+        margin-right: 50px;
+    }
 }
 
 .nav-list__link {
@@ -52,43 +93,66 @@
         background-color: var(--accent-color);
         border-radius: 2px;
     }
-
 }
-
-// .nav-list__link-hover::after {
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-
-//     content: '';
-//     width: 100%;
-//     height: 4px;
-//     background-color: var(--accent-color);
-//     border-radius: 2px;
-// }
 
 .contacts-list {
-    margin-left: auto;
+    display: none;
+}
+@media screen and (min-width: 768px) {
+    .contacts-list {
+        margin-left: auto;
 
-    display: flex;
-    align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 
-    &:not(:last-child) {
+}
+@media screen and (min-width: 1200px) {
+    .contacts-list {
+        flex-direction: row;
+        align-items: center;
+
+        &:not(:last-child) {
         margin-right: 10px;
-    }    
+        }
+        }
+
 }
 
-.contact-list__item:not(:last-child) {
-    margin-right: 50px;
+@media screen and (min-width: 768px) {
+    .contact-list__item:not(:last-child) {
+        padding-bottom: 10px;
+    }
 }
+@media screen and (min-width: 1200px) {
+    .contact-list__item:not(:last-child) {
+        padding-bottom: 0;
+        margin-right: 50px;
+    }
+}
+
+// .contacts-list {
+//     
+
+//     display: flex;
+//     align-items: center;
+
+//     &:not(:last-child) {
+//         margin-right: 10px;
+//     }    
+// }
+
+// .contact-list__item:not(:last-child) {
+//     margin-right: 50px;
+// }
 
 .contact-list__information {
     display: flex;
     align-items: center;
 
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     color: var(--secondary-text-color-teme-dark);
 
@@ -98,6 +162,13 @@
         color: var(--accent-color);
 
         fill: var(--accent-color);
+    }
+}
+
+@media screen and (min-width: 1200px){
+    .contact-list__information{
+    font-size: 14px;
+    line-height: 1.14;
     }
 }
 
