--- a/sass/layot/_contact.scss
+++ b/sass/layot/_contact.scss
@@ -2,6 +2,7 @@
     /* margin-bottom: 20px; */
 
     color: var(--primery-text-color-teme-dark);
+    text-align: center;
 }
 
 .contact-address {
@@ -29,10 +30,13 @@
 }
 
 .footer-links-container {
-    gap: 20px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
     display: flex;
-    margin-left: 70px;
+
+    gap: 20px;
+
     /* align-items: center; */
     align-items: baseline;
     flex-direction: column;
@@ -53,7 +57,19 @@
         background-color: var(--accent-color);
     }
 }
-
+@media screen and (min-width: 768px) {
+    .footer-links-container {
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-left: 160px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .footer-links-container {
+        padding-left: 0px;
+        margin-left: 70px;
+    }
+}
 
 
 
