--- a/sass/layot/_employes.scss
+++ b/sass/layot/_employes.scss
@@ -1,16 +1,29 @@
 .our-team {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
     background-color: var(--background-color-teme-light);
 }
-
-.about-team {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
+@media screen and (min-width: 1200px) {
+    .our-team {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
+
+.about-team{
+    display: block;
+    box-sizing: border-box;
+}
+@media screen and (min-width: 1200px){
+    .about-team {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+        margin-top: -30px;
+    }
+}
+
 
 .about-team__items {
     flex-basis: calc((100% - 4*30px)/4);
