--- a/sass/layot/_footer.scss
+++ b/sass/layot/_footer.scss
@@ -7,15 +7,27 @@
     background-color: var(--background-color-teme-dark);
 }
 
-.footer-container {
+.footer-container{
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
+    align-items: center;
 }
+@media screen and (min-width: 768px){
+    .footer-container{
+        flex-direction: row;
+        align-items: baseline;
+        flex-wrap: wrap;
+    }
+}
+// .footer-container {
+//     display: flex;
+//     align-items: baseline;
+// }
 
 .footer-subscription-container {
     display: flex;
-    margin-left: auto;
     flex-direction: column;
+    align-items: center;
 
     &>.footer-links-title {
         margin-bottom: 20px;
@@ -23,15 +35,28 @@
         color: var(--primery-text-color-teme-dark);
     }
 }
+@media screen and (min-width: 1200px) {
+    .footer-subscription-container {
+        margin-left: auto;
+        align-items: baseline;
+    }
+}
 
 .subscription-form {
     display: flex;
+    flex-direction: column;
+}
+@media screen and (min-width: 1200px){
+    .subscription-form{
+        flex-direction: row;
+    }
 }
 
 .subscription-form-input {
-    width: 358px;
+    width: 450px;
     height: 50px;
     padding-left: 16px;
+    margin-bottom: 20px;
 
     color: var(--background-color-teme-light);
 
@@ -47,9 +72,16 @@
         border-color: var(--accent-color);
     }
 }
+@media screen and (min-width: 1200px){
+    .subscription-form-input{
+        width: 358px;
+        margin-bottom: 0;
+    }
+}
+
 
 .subscription-form-submit-btn {
-    margin-left: 12px;
+    width: 200px;
 
     padding: 10px 28px;
     border: 1px solid var(--accent-color);
@@ -62,6 +94,11 @@
 
     &:hover, &:focus {
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
+}
+@media screen and (min-width: 1200px){
+    .subscription-form-submit-btn{
+        margin-left: 12px;
     }
 }
 
