--- a/sass/layot/_hero.scss
+++ b/sass/layot/_hero.scss
@@ -1,18 +1,62 @@
 .hero {
-    max-width: 1600px;
+    max-width: 480px;
     margin: auto;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url("../images/Img.png");
+        rgba(47, 48, 58, 0.4)),
+        url("../images/Img-mobile.png");
     background-size: cover;
     background-repeat: no-repeat;
 
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
 
     background-color: var(--background-color-teme-dark);
 }
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .hero {
+        background-image: url("../images/Img-mobile-@2x.png");
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero{
+        max-width: 768px;
+        background-image: url("../images/Img-tablet.png");
+    }
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx), screen and (min-width: 768px){
+    .hero {
+        background-image: url("../images/Img-tablet-@2x.png");
+    }
+}
+
+
+
+@media screen and (min-width: 1200px){
+    .hero{
+        max-width: 1600px;
+
+        padding-top: 200px;
+        padding-bottom: 200px;
+
+        background-image: url("../images/Img-desktop.png");
+    }
+}
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx),
+screen and (min-width: 1200px) {
+    .hero {
+        background-image: url("../images/Img-desktop-@2x.png");
+    }
+}
+
 
 .hero-container {
     display: flex;
