--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/modal-btn';
 @import './components/social-list';
 @import './components/backdrop';
+@import './components/mobile-menu';
 
 @import './layot/header';
 @import './layot/hero';
