--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ img {
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  width: 320px;
 }
 
 @media screen and (min-width: 480px) {
@@ -104,7 +105,6 @@ img {
   }
 }
 .subtitle {
-  justify-content: center;
   margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
@@ -126,7 +126,7 @@ img {
 
 .modal-button {
   min-width: 160px;
-  padding: 10px 32px;
+  padding: 10px 24px;
   border: 1px solid var(--accent-color);
   border-radius: 4px;
   margin-top: 30px;
@@ -142,6 +142,11 @@ img {
   cursor: pointer;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-button {
+    padding: 10px 32px;
+  }
+}
 .social-list {
   display: flex;
   justify-content: center;
@@ -185,8 +190,8 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 580px;
+  width: 450px;
+  height: 608px;
   border-radius: 4px;
   background-color: var(--primery-text-color-teme-dark);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -219,6 +224,7 @@ img {
 
 .modal-header {
   margin-bottom: 12px;
+  word-wrap: break-word;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -303,7 +309,7 @@ img {
   position: relative;
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-teme-dark);
@@ -350,13 +356,28 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 528px;
+    height: 580px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-form-checkbox-label {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
 .mobile-menu {
   position: absolute;
   top: 0;
   left: 0;
   background-color: var(--primery-text-color-teme-dark);
   width: 100%;
-  height: 100vw;
   overflow: auto;
   opacity: 0;
   visibility: hidden;
@@ -364,11 +385,6 @@ img {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
-}
 .mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
@@ -383,8 +399,8 @@ img {
 
 .mobile-menu__close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 15px;
+  right: 15px;
   border: none;
   padding: 0;
   line-height: 0;
@@ -402,7 +418,11 @@ img {
   fill: var(--accent-color);
 }
 
-.mobile-menu__navigation {
+.mobile-menu__nav-list:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__nav-item {
   font-family: var(--primery-font-family);
   font-style: normal;
   font-weight: 500;
@@ -412,11 +432,7 @@ img {
   color: var(--secondary-text-color-teme-light);
 }
 
-.mobile-menu__nav-list:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu__nav-list-accent {
+.mobile-menu__nav-item--accent {
   color: var(--accent-color);
 }
 
@@ -469,62 +485,62 @@ img {
 
 .mobile-menu__line {
   font-style: normal;
-  font-weight: 400px;
-  font-style: 12px;
   line-height: 15px;
   color: rgba(33, 33, 33, 0.2);
 }
 
-.page-header {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  position: relative;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
   .page-header {
-    padding: 0;
-    border-bottom: 1px solid #ececec;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    position: relative;
+  }
+  .navigation {
+    display: none;
+  }
+  .contacts-list {
+    display: none;
   }
 }
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 767px) {
   .header-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
   }
+  .mobile-menu-btn {
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    fill: var(--primery-text-color-teme-light);
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu-btn:hover, .mobile-menu-btn:focus {
+    fill: var(--accent-color);
+  }
+  .mobile-menu-btn__icon {
+    fill: var(--secondary-text-color-teme-light);
+  }
 }
-.mobile-menu-btn {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
-}
-
 @media screen and (min-width: 768px) {
   .mobile-menu-btn {
     display: none;
   }
-}
-.mobile-menu-btn__icon {
-  fill: var(--secondary-text-color-teme-light);
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.nav-list {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
+  .page-header {
+    border-bottom: 1px solid #ececec;
+  }
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
   .nav-list {
     display: flex;
     align-items: center;
@@ -532,42 +548,56 @@ img {
   .nav-list__item:not(:last-child) {
     margin-right: 50px;
   }
-}
-.nav-list__link {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color-teme-light);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav-list__link:hover, .nav-list__link:focus {
-  color: var(--accent-color);
-}
-.nav-list__link-hover::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-}
-
-.contacts-list {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
+  .nav-list__link {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color-teme-light);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-list__link:hover, .nav-list__link:focus {
+    color: var(--accent-color);
+  }
+  .nav-list__link-hover::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
   .contacts-list {
     margin-left: auto;
     display: flex;
     flex-direction: column;
+  }
+  .contact-list__item:not(:last-child) {
+    padding-bottom: 10px;
+  }
+  .contact-list__information {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color-teme-dark);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-list__information:hover, .contact-list__information:focus {
+    color: var(--accent-color);
+    fill: var(--accent-color);
+  }
+  .contact-item {
+    margin-right: 10px;
+    fill: currentColor;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -578,48 +608,19 @@ img {
   .contacts-list:not(:last-child) {
     margin-right: 10px;
   }
-}
-@media screen and (min-width: 768px) {
-  .contact-list__item:not(:last-child) {
-    padding-bottom: 10px;
-  }
-}
-@media screen and (min-width: 1200px) {
   .contact-list__item:not(:last-child) {
     padding-bottom: 0;
     margin-right: 50px;
   }
-}
-.contact-list__information {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color-teme-dark);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contact-list__information:hover, .contact-list__information:focus {
-  color: var(--accent-color);
-  fill: var(--accent-color);
-}
-
-@media screen and (min-width: 1200px) {
   .contact-list__information {
     font-size: 14px;
     line-height: 1.14;
   }
 }
-.contact-item {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
 .hero {
   max-width: 480px;
   margin: auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img.png");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img-mobile.png");
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 118px;
@@ -629,12 +630,18 @@ img {
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../images/Img@2x.png");
+    background-image: url("../images/Img-mobile-@2x.png");
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
+    background-image: url("../images/Img-tablet.png");
+  }
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: url("../images/Img-tablet-@2x.png");
   }
 }
 @media screen and (min-width: 1200px) {
@@ -642,6 +649,12 @@ img {
     max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: url("../images/Img-desktop.png");
+  }
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: url("../images/Img-desktop-@2x.png");
   }
 }
 .hero-container {
@@ -655,55 +668,9 @@ img {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .feature-text {
     padding-top: 94px;
-    padding-bottom: 0;
-  }
-}
-.feature-text > .container {
-  margin: 0;
-}
-
-@media screen and (min-width: 768px) {
-  .feature-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .feature-list {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-items: flex-start;
-    margin: 0;
-    gap: 30px;
-  }
-}
-.feature-list__items {
-  width: 450px;
-}
-
-@media screen and (min-width: 768px) {
-  .feature-list__items {
-    width: 354px;
-    box-sizing: border-box;
-    flex-basis: 50%;
-    margin-left: 30px;
-    margin-top: 30px;
-    padding: 0;
-    line-height: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .feature-list__items {
-    width: 270px;
-  }
-  .feature-list__items:not(:last-child) {
-    padding-bottom: 30px;
   }
 }
 .feature-list__wrapper {
@@ -711,24 +678,13 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 450px;
+  width: 270px;
   height: 120px;
   background-color: var(--background-color-teme-light);
 }
 
-@media screen and (min-width: 768px) {
-  .feature-list__wrapper {
-    width: 354px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .feature-list__wrapper {
-    width: 270px;
-  }
-}
 .feature-list__item {
   margin-bottom: 10px;
-  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -736,14 +692,10 @@ img {
   color: var(--secondary-text-color-teme-light);
 }
 
-@media screen and (min-width: 768px) {
-  .feature-list__item {
-    text-align: left;
-  }
-}
 .feature-list__text {
   font-weight: 400;
   font-size: 14px;
+  word-wrap: break-word;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-teme-dark);
@@ -790,8 +742,8 @@ img {
 }
 
 .our-team {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 94px;
+  padding-bottom: 94px;
   background-color: var(--background-color-teme-light);
 }
 
@@ -801,27 +753,41 @@ img {
     padding-bottom: 94px;
   }
 }
-.about-team {
-  display: block;
-  box-sizing: border-box;
-}
-
-@media screen and (min-width: 1200px) {
-  .about-team {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-}
 .about-team__items {
-  flex-basis: calc((100% - 120px) / 4);
-  margin-left: 30px;
   margin-top: 30px;
+  width: 270px;
   background-color: var(--primery-text-color-teme-dark);
   border-bottom: var(--secondary-text-color-teme-light);
 }
 
+@media screen and (min-width: 480px) {
+  .about-team__items {
+    margin-top: 0;
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about-team {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .about-team__items {
+    flex-basis: calc((100% - 60px) / 2);
+    width: 354px;
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about-team {
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+  .about-team__items {
+    flex-basis: calc((100% - 120px) / 4);
+    width: 270px;
+  }
+}
 .about-team__text {
   padding: 30px 20px;
   text-align: center;
@@ -903,15 +869,26 @@ img {
 }
 
 .footer-contacts-container > .logo-link {
-  /* margin-bottom: 20px; */
   color: var(--primery-text-color-teme-dark);
-  text-align: center;
 }
 
+@media screen and (max-width: 1199px) {
+  .footer-contacts-container > .logo-link {
+    margin: 0;
+  }
+  .footer-contacts-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .contact-address {
+    align-items: center;
+  }
+}
 .contact-address {
   margin-top: 20px;
   display: flex;
-  align-items: flex-start;
   flex-direction: column;
   font-style: normal;
   font-weight: 400;
@@ -932,12 +909,10 @@ img {
 }
 
 .footer-links-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: flex;
   gap: 20px;
-  /* align-items: center; */
-  align-items: baseline;
+  padding-top: 60px;
+  display: flex;
+  align-items: center;
   flex-direction: column;
 }
 .footer-links-container > .footer-links-title {
@@ -955,15 +930,13 @@ img {
 
 @media screen and (min-width: 768px) {
   .footer-links-container {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 160px;
+    padding-top: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer-links-container {
-    padding-left: 0px;
     margin-left: 70px;
+    align-items: baseline;
   }
 }
 .page-footer {
@@ -985,6 +958,17 @@ img {
     flex-direction: row;
     align-items: baseline;
     flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-container {
+    justify-content: space-around;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer-subscription-container {
+    padding-top: 60px;
   }
 }
 .footer-subscription-container {
@@ -1007,15 +991,17 @@ img {
 .subscription-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (min-width: 1200px) {
   .subscription-form {
     flex-direction: row;
+    align-items: baseline;
   }
 }
 .subscription-form-input {
-  width: 450px;
+  width: 320px;
   height: 50px;
   padding-left: 16px;
   margin-bottom: 20px;
@@ -1031,6 +1017,11 @@ img {
   border-color: var(--accent-color);
 }
 
+@media screen and (min-width: 480px) {
+  .subscription-form-input {
+    width: 450px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .subscription-form-input {
     width: 358px;
