--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,11 +6,16 @@
 //     margin-right: auto;
 // }
 
+// 0px - 479px
 .container{
     padding-left: 15px;
     padding-right: 15px;
+
+    width: 320px;
+    // background-color: var(--via-magenta);
 }
 
+// 480px - 767px
 @media screen and (min-width: 480px){
     .container {
         width: 448px;
@@ -18,15 +23,17 @@
         margin-right: auto;
     }
 }
+
+// 768px - 1199px
 @media screen and (min-width: 768px) { 
     .container {
         width: 738px;
     }     
 }
+
+// 1200px +
 @media screen and (min-width: 1200px) {
     .container {
         width: 1200px;
-
-
     }
 }
