--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,3 +1,9 @@
+@media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
+
 .mobile-menu{
     position: absolute;
     top: 0;
@@ -5,7 +11,7 @@
     background-color: var(--primery-text-color-teme-dark);
 
     width: 100%;
-    height: 100vw;
+    // height: 100vw;
 
     overflow: auto;
 
@@ -15,11 +21,6 @@
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (min-width: 768px){
-    .mobile-menu{
-        display: none;
-    }
 }
 
 .mobile-menu.is-open{
@@ -37,8 +38,8 @@
 
 .mobile-menu__close-btn{
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 15px;
+    right: 15px;
 
     border: none;
     padding: 0;
@@ -62,7 +63,11 @@
 
 }
 
-.mobile-menu__navigation{
+.mobile-menu__nav-list:not(:last-child) {
+    margin-bottom: 32px;
+}
+
+.mobile-menu__nav-item{
     font-family: var(--primery-font-family);
     font-style: normal;
     font-weight: 500;
@@ -73,11 +78,7 @@
     color: var(--secondary-text-color-teme-light);
 }
 
-.mobile-menu__nav-list:not(:last-child){
-    margin-bottom: 32px;
-}
-
-.mobile-menu__nav-list-accent{
+.mobile-menu__nav-item--accent{
     color: var(--accent-color);
 }
 
@@ -133,8 +134,8 @@
 
 .mobile-menu__line{
     font-style: normal;
-    font-weight: 400px;
-    font-style: 12px;
+    // font-weight: 400px;
+    // font-style: 12px;
     line-height: 15px;
 
     color: rgba(33, 33, 33, 0.2);
