--- a/sass/layot/_about.scss
+++ b/sass/layot/_about.scss
@@ -2,15 +2,10 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 768px){
     .feature-text{
         padding-top: 94px;
-        padding-bottom: 0;
     }
-}
-
-.feature-text>.container{
-    margin: 0;
 }
 
 // .feature-list {
@@ -20,79 +15,24 @@
 
 //     gap: 30px;
 // }
-@media screen and (min-width: 768px) {
-    .feature-list {
-        display: flex;
-        flex-wrap: wrap;
 
-        margin-left: -30px;
-        margin-top: -30px;
-    }
-}
-@media screen and (min-width: 1200px) {
-    .feature-list {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        align-items: flex-start;
-        margin: 0;
-        
-        gap: 30px;
-    }
-}
-
-
-.feature-list__items {
-    width: 450px;
-}
-@media screen and (min-width: 768px) {
-    .feature-list__items {
-        width: 354px;
-        box-sizing: border-box;
-        flex-basis: 50%;
-        margin-left: 30px;
-        margin-top: 30px;
-        padding: 0;
-        line-height: 0;
-    }
-}
-@media screen and (min-width: 1200px) {
-    .feature-list__items {
-        width: 270px;
-    }
-    .feature-list__items:not(:last-child) {
-        padding-bottom: 30px;
-    }
-}
-
+// .feature-list__items {
+//     width: 270px;
+// }
 
 .feature-list__wrapper {
     margin-bottom: 30px;
-
     display: flex;
     align-items: center;
     justify-content: center;
 
-    width: 450px;
+    width: 270px;
     height: 120px;
     background-color: var(--background-color-teme-light);
-}
-@media screen and (min-width: 768px) {
-    .feature-list__wrapper {
-        width: 354px;
-
-
-    }
-}
-@media screen and (min-width: 1200px) {
-    .feature-list__wrapper {
-        width: 270px;
-    }
 }
 
 .feature-list__item {
     margin-bottom: 10px;
-    text-align: center;
 
     font-weight: 700;
     font-size: 14px;
@@ -100,17 +40,12 @@
     letter-spacing: 0.03em;
     color: var(--secondary-text-color-teme-light);
 }
-@media screen and (min-width: 768px) {
-    .feature-list__item {
-        text-align: left;
-    }
-}
 
 .feature-list__text {
     font-weight: 400;
     font-size: 14px;
+    word-wrap: break-word;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color-teme-dark);
 }
-
