--- a/sass/layot/_contact.scss
+++ b/sass/layot/_contact.scss
@@ -1,14 +1,30 @@
 .footer-contacts-container>.logo-link {
-    /* margin-bottom: 20px; */
-
     color: var(--primery-text-color-teme-dark);
-    text-align: center;
 }
+
+// 0px - 1199px
+@media screen and (max-width: 1199px){
+    .footer-contacts-container>.logo-link{
+        margin: 0;
+    }
+    .footer-contacts-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .contact-address{
+        align-items: center;
+    }
+}
+
+
+// 0px - 767px
 
 .contact-address {
     margin-top: 20px;
     display: flex;
-    align-items: flex-start;
+    // align-items: flex-start;
     flex-direction: column;
 
     font-style: normal;
@@ -30,22 +46,19 @@
 }
 
 .footer-links-container {
-    padding-top: 60px;
-    padding-bottom: 60px;
-
-    display: flex;
-
     gap: 20px;
 
-    /* align-items: center; */
-    align-items: baseline;
+    padding-top: 60px;
+    display: flex;
+
+    align-items: center;
     flex-direction: column;
 
     &>.footer-links-title {
         text-transform: uppercase;
         color: var(--primery-text-color-teme-dark);
     }
-    
+
     & .social-list-link {
         background-color: rgba(255, 255, 255, 0.1);
         fill: var(--primery-text-color-teme-dark);
@@ -53,24 +66,25 @@
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    & .social-list-link:hover, & .social-list-link:focus {
+    & .social-list-link:hover,
+    & .social-list-link:focus {
         background-color: var(--accent-color);
     }
 }
+
+// 768px - 1199px
 @media screen and (min-width: 768px) {
     .footer-links-container {
-        padding-top: 0px;
-        padding-bottom: 0px;
-        padding-left: 160px;
+        padding-top: 0;
+
     }
 }
+
+// 1200px +
 @media screen and (min-width: 1200px) {
     .footer-links-container {
-        padding-left: 0px;
         margin-left: 70px;
+        align-items: baseline;
     }
 }
-
-
-
 
