--- a/sass/layot/_header.scss
+++ b/sass/layot/_header.scss
@@ -1,59 +1,66 @@
-.page-header {
-    padding-top: 16px;
-    padding-bottom: 16px;
-
-    position: relative;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px){
     .page-header {
-        padding: 0;
-        border-bottom: 1px solid #ececec;
+        padding-top: 16px;
+        padding-bottom: 16px;
+
+        position: relative;
     }
-}
-
-//480px +
-
-.header-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-@media screen and (min-width: 768px) {
-    .header-container {
-        display: flex;
-        align-items: center;
+    .navigation {
+        display: none;
     }
-}
-
-.mobile-menu-btn{
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    line-height: 0;
-}
-//кнопка исчезает, когда экран увеличивается
-@media screen and (min-width: 768px) {
-    .mobile-menu-btn {
+    .contacts-list {
         display: none;
     }
 }
 
-.mobile-menu-btn__icon{
-    fill: var(--secondary-text-color-teme-light);
-}
-
-//Start content
-
-.navigation {
+// 0px - 767px
+@media screen and (min-width: 0px) and (max-width: 767px){
+    .header-container{
         display: flex;
+        justify-content: space-between;
         align-items: center;
     }
 
-.nav-list {
-    display: none;
+    .mobile-menu-btn {
+        width: 40px;
+        height: 40px;
+
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        line-height: 0;
+
+        fill: var(--primery-text-color-teme-light);
+        cursor: pointer;
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            fill: var(--accent-color);
+        }
+    }
+    .mobile-menu-btn__icon {
+        fill: var(--secondary-text-color-teme-light);
+    }
 }
-@media screen and (min-width: 768px) {
+
+// 768px - 1199px
+@media screen and (min-width: 768px){
+    .mobile-menu-btn{
+        display: none;
+    }
+    .page-header {
+        border-bottom: 1px solid #ececec;
+    }
+    .header-container {
+        display: flex;
+        align-items: center;
+    }
+    .navigation {
+        display: flex;
+        align-items: center;
+    }
     .nav-list {
         display: flex;
         align-items: center;
@@ -61,53 +68,75 @@
     .nav-list__item:not(:last-child) {
         margin-right: 50px;
     }
-}
 
-.nav-list__link {
-    position: relative;
+    .nav-list__link {
+        position: relative;
 
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--secondary-text-color-teme-light);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: var(--secondary-text-color-teme-light);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover, &:focus {
-        color: var(--accent-color);
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+
+        &-hover::after {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+
+            content: '';
+            width: 100%;
+            height: 4px;
+            background-color: var(--accent-color);
+            border-radius: 2px;
+        }
     }
-
-    &-hover::after {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-
-        content: '';
-        width: 100%;
-        height: 4px;
-        background-color: var(--accent-color);
-        border-radius: 2px;
-    }
-}
-
-.contacts-list {
-    display: none;
-}
-@media screen and (min-width: 768px) {
     .contacts-list {
         margin-left: auto;
 
         display: flex;
         flex-direction: column;
     }
+    .contact-list__item:not(:last-child) {
+        padding-bottom: 10px;
+    }
+    .contact-list__information {
+        display: flex;
+        align-items: center;
 
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.02em;
+        color: var(--secondary-text-color-teme-dark);
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover, &:focus{
+            color: var(--accent-color);
+
+            fill: var(--accent-color);
+        }
+    }
+    .contact-item {
+        margin-right: 10px;
+
+        fill: currentColor;
+    }
 }
-@media screen and (min-width: 1200px) {
+
+// 1200px +
+@media screen and (min-width: 1200px){
     .contacts-list {
         flex-direction: row;
         align-items: center;
@@ -115,65 +144,112 @@
         &:not(:last-child) {
         margin-right: 10px;
         }
-        }
-
-}
-
-@media screen and (min-width: 768px) {
-    .contact-list__item:not(:last-child) {
-        padding-bottom: 10px;
     }
-}
-@media screen and (min-width: 1200px) {
     .contact-list__item:not(:last-child) {
         padding-bottom: 0;
         margin-right: 50px;
     }
+    .contact-list__information{
+        font-size: 14px;
+        line-height: 1.14;
+    }        
 }
 
+// .page-header {
+//     border-bottom: 1px solid #ececec;
+// }!!
+
+// .header-container {
+//     display: flex;
+//     align-items: center;
+// }!!
+
+// .navigation {
+//     display: flex;
+//     align-items: center;
+// }!!
+
+// .nav-list {
+//     display: flex;
+//     align-items: center;
+// }!!
+
+// .nav-list__item:not(:last-child) {
+//     margin-right: 50px;
+// }!!
+
+// .nav-list__link {
+//     position: relative;
+
+//     display: block;
+//     padding-top: 32px;
+//     padding-bottom: 32px;
+
+//     font-weight: 500;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.02em;
+//     color: var(--secondary-text-color-teme-light);
+
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &:hover,
+//     &:focus {
+//         color: var(--accent-color);
+//     }
+
+//     &-hover::after {
+//         position: absolute;
+//         bottom: 0;
+//         left: 0;
+
+//         content: '';
+//         width: 100%;
+//         height: 4px;
+//         background-color: var(--accent-color);
+//         border-radius: 2px;
+//     }
+
+// }!!
+
+
 // .contacts-list {
-//     
+//     margin-left: auto;
 
 //     display: flex;
 //     align-items: center;
 
 //     &:not(:last-child) {
 //         margin-right: 10px;
-//     }    
+//     }
 // }
 
 // .contact-list__item:not(:last-child) {
 //     margin-right: 50px;
 // }
 
-.contact-list__information {
-    display: flex;
-    align-items: center;
+// .contact-list__information {
+//     display: flex;
+//     align-items: center;
 
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.02em;
-    color: var(--secondary-text-color-teme-dark);
+//     font-weight: 500;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.02em;
+//     color: var(--secondary-text-color-teme-dark);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover, &:focus{
-        color: var(--accent-color);
+//     &:hover,
+//     &:focus {
+//         color: var(--accent-color);
 
-        fill: var(--accent-color);
-    }
-}
+//         fill: var(--accent-color);
+//     }
+// }
 
-@media screen and (min-width: 1200px){
-    .contact-list__information{
-    font-size: 14px;
-    line-height: 1.14;
-    }
-}
+// .contact-item {
+//     margin-right: 10px;
 
-.contact-item {
-    margin-right: 10px;
-
-    fill: currentColor;
-}
+//     fill: currentColor;
+// }
